--- a/_posts/2020-11-18-stackrox.md
+++ b/_posts/2020-11-18-stackrox.md
@@ -3,7 +3,7 @@ layout: post
 title: StackRox Secures Cybrary’s Fast-growing Cybersecurity Education Platform Running on Google Kubernetes Engine
 date: 2020-11-18 03:49
 image: /images/article.jpeg
-tag: Podcast
+tag: Article
 categories: [article]
 link: https://www.stackrox.com/press-releases/2020/11/stackrox-secures-cybrarys-fast-growing-cybersecurity-education-platform-running-on-google-kubernetes-engine/
 ---
